--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,41 +1,36 @@
-<html>
-  <head>
-    <%- include('../partials/head', { title: "" });%>
-  </head>
-  <body>
-    <div class="d-flex w-100 h-100 justify-content-center align-items-center">
-      <div class="card">
-        <div class="card-body">
-          <form action="/auth/login" method="POST">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Email address</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-                placeholder="name@example.com"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Password</label
-              >
-              <input
-                type="password"
-                class="form-control"
-                id="password"
-                name="password"
-                placeholder="***********"
-              />
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
+<%- include('../partials/head');%>
+<div class="d-flex w-100 justify-content-center align-items-center">
+  <div class="card error-card p-5">
+    <h2 class="display-1 fw-bold text-center text-danger">Login</h2>
+    <div class="card-body">
+      <form action="/auth/login" method="POST">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="name@example.com"
+          />
         </div>
-      </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            placeholder="***********"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
     </div>
-    <%- include('../partials/footer');%>
-  </body>
-</html>
+  </div>
+</div>
+<%- include('../partials/footer');%>
