--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="px-5 py-3 bg-light text-center">
   <p>&copy; 2024 DigiMenu</p>
 </footer>
 <script
@@ -6,3 +6,5 @@
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
   crossorigin="anonymous"
 ></script>
+</body>
+</html>
