--- a/views/pages/menu/create.ejs
+++ b/views/pages/menu/create.ejs
@@ -1,6 +1,6 @@
 <%- include('../../partials/head');%> <%- include('../../partials/header');%>
 <main class="d-flex h-100">
-  <%- include('../../partials/sidebar');%>
+  <%- include('../../partials/Sidebar');%>
   <div class="p-5 w-100">
     <h1 class="h3 mb-4">Create Menu Item</h1>
     <form action="/menu/createNewItem" method="POST">
