--- a/views/partials/Sidebar.ejs
+++ b/views/partials/Sidebar.ejs
@@ -1,3 +1,4 @@
+<!-- sidebar -->
 <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar h-100">
   <div class="position-sticky pt-3">
     <ul class="nav flex-column">
